Bug 59861 (kbdserver) - Mic boost option is absent for VIA VT1708S codec.
Summary: Mic boost option is absent for VIA VT1708S codec.
Status: RESOLVED CODE_FIX
Alias: kbdserver
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-18 03:16 UTC by KBDSERVER
Modified: 2013-11-13 17:14 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.9.5-030905-generic
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
alsa-info (6.81 KB, application/x-bzip)
2013-06-18 03:16 UTC, KBDSERVER
Details
Fix patch (1.25 KB, patch)
2013-06-18 06:21 UTC, Takashi Iwai
Details | Diff

Description KBDSERVER 2013-06-18 03:16:15 UTC
Created attachment 105161 [details]
alsa-info

In 3.9.5-030905-generic version - Rear (Front) Mic Boost Volume option is absent for VIA VT1708S codec.
3.8.0-19-generic - everything OK.
Comment 1 Takashi Iwai 2013-06-18 06:17:45 UTC
Could you try the patch below?
Comment 2 Takashi Iwai 2013-06-18 06:21:12 UTC
Created attachment 105181 [details]
Fix patch
Comment 3 KBDSERVER 2013-06-18 21:06:08 UTC
It works. Thanks!
Comment 4 Takashi Iwai 2013-11-13 17:14:37 UTC
The patch was already merged to the upstream.

Note You need to log in before you can comment on or make changes to this bug.